--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
 			<router-link tag="li" to="/detail.html?no=110">detail.html?no=110</router-link>
 		</ul>
 
+		<a href="https://github.com/chaordicorg/vue_spa_test">Go to Souce | GitHub</a>
+
 		<h3>コンテンツ</h3>
 		<router-view></router-view>
 	</div>
